tests/sksl/errors/SwizzleConstantOutput.glsl
### Compilation failed:

error: 3: cannot assign to this expression
1 error
